--- a/sass/navigation/_nav-core.scss
+++ b/sass/navigation/_nav-core.scss
@@ -4,7 +4,7 @@
 // The main layout for the website navigation, for both mobile
 // and desktop devices.
 // -----------------------------------------------------------
-$enable-animations: true;
+$enable-animations: false;
 
 .nav-primary .menu-items {
   position: relative;
