--- a/sass/navigation/_nav-desktop.scss
+++ b/sass/navigation/_nav-desktop.scss
@@ -106,7 +106,6 @@ $absolute-navigation: false;
         width: $dropdown-width;
         visibility: visible;
         opacity: 1;
-        top: 0;
         transform: translateY(1.5rem);
         z-index: -1;
         transition: none;
